--- a/movie.html
+++ b/movie.html
@@ -280,7 +280,7 @@
         },
         'ho!': {
             desc: '(2014~2015)<br>작가: 억수씨<br>장르: 드라마, 로맨스<br>플랫폼: 네이버 웹툰<br><br>대학생이 되어 지방에서 서울로 올라온 김원이. 학원 강사로 알바를 시작하는데, 첫 학생이 청각장애인인 초등학교 6학년 Ho다.<br>학원에서 만난 두 사람이 성장해나가는 이야기를 그린 웹툰',
-            img: 'ho.jpg'
+            img: 'Ho.jpg'
         },
         '연민의 굴레': {
             desc: '(2009~2011)<br>작가: 재활용<br>장르: 일상, 코믹<br>플랫폼: 네이버 웹툰<br><br>삐딱한 모범생 안민. 어설픈 반항아 차련.<br>7년째 이웃사촌인 두 사람.<br>세상이 지루하기만 한 그들과 함께 조금씩 굴러가는<br>수상한 하루하루..',
