--- a/movie.html
+++ b/movie.html
@@ -182,7 +182,7 @@
                 <div class="movie-item"><img src="homeless.webp" alt="집이 없어" class="movie-img" /><div class="movie-title">집이 없어</div></div>
                 <div class="movie-item"><img src="welcome305.webp" alt="어서오세요 305호에" class="movie-img" /><div class="movie-title">어서오세요 305호에</div></div>
                 <div class="movie-item"><img src="asurai.webp" alt="아스라이" class="movie-img" /><div class="movie-title">아스라이</div></div>
-                <div class="movie-item"><img src="ho.jpg" alt="ho!" class="movie-img" /><div class="movie-title">ho!</div></div>
+                <div class="movie-item"><img src="Ho.jpg" alt="ho!" class="movie-img" /><div class="movie-title">ho!</div></div>
                 <div class="movie-item"><img src="recycle.webp" alt="연민의 굴레" class="movie-img" /><div class="movie-title">연민의 굴레</div></div>
                 <div class="movie-item"><img src="umbi.jpg" alt="움비처럼" class="movie-img" /><div class="movie-title">움비처럼</div></div>
             </div>
